gcc/testsuite/rust/rustc/ui/lifetimes/lifetime-errors/ex3-both-anon-regions-self-is-anon_dg.rs
struct Foo {
    field: i32,
}

impl Foo {
    fn foo<'a>(&self, x: &Foo) -> &Foo {
        if true { x } else { self }
// { dg-error "" "" { target *-*-* } .-1 }
    }
}

fn main() {}

